[tool.poetry]
name = "dm3058"
version = "0.1.0"
description = ""
authors = ["artem <ki4igin1992@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyvisa = "^1.13.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
